# py-webscraper

./: Dockerfile  README.md  pyproject.toml
src/py_webscraper/: cli.py
tests/: test_cli.py
